# FastDB

./: .gitignore  README.md  pyproject.toml  setup.py
fastdb/: pyproject.toml
src/: __init__.py
src/app/: __init__.py
