[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Maheus Magalhães <basemagalha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
